# CarRent-Course-Project

./: CMakeLists.txt  README.md  main.cpp
Admin/: Admin.cpp  Admin.h
All Docs/: Ведомость документов.drawio  Диаграмма  финал.drawio  Курсач.docx  Листинг кода.docx  алгоритмы 1 и 2.drawio
Car/: Car.cpp  Car.h  CarBrands.h  DieselCar.cpp  DieselCar.h  ElectricCar.cpp  ElectricCar.h  FileWorker.cpp  FileWorker.h  GasCar.cpp  GasCar.h  HybridCar.cpp  HybridCar.h  IdGenerator.cpp  IdGenerator.h  OilCar.cpp  OilCar.h  PetrolCar.cpp  PetrolCar.h
Client/: Client.cpp  Client.h
DataBase/: Database.cpp  Database.h
Exception/: Exception.h
Exeption/: Exeption.h
Files/: CarBrands.txt
ID/: IdGenerator.cpp  IdGenerator.h
Interface/: Authentication.cpp  Authentication.h  CarInUsage.cpp  CarInUsage.h  CarPrinter.cpp  CarPrinter.h  Interface.cpp  Interface.h  UserInterface.h  Userdata.cpp  Userdata.h
Persons/: Admin.cpp  Admin.h  Person.cpp  Person.h  Session.h  User.cpp  User.h  Userdata.cpp  Userdata.h
Session/: Session.cpp  Session.h
